another round of fix

--- a/vl_07.Rmd
+++ b/vl_07.Rmd
@@ -155,7 +155,7 @@ f(x) \to \min_{x\in \mathbb R^{n}}
 
 Berechnen sie n&auml;herungsweise den Gradienten der Beispielfunktion 
 \begin{equation*}
-f(x_1, x_2, x_3) = \sin(x_1) + x_3\cos(x_2) + x_1x_2x_3 - 2x_2 + x_1^2 + x_2^2 + x_3^2
+f(x_1, x_2, x_3) = \sin(x_1) + x_3\cos(x_2) + - 2x_2 + x_1^2 + x_2^2 + x_3^2
 \end{equation*}
 (**Achtung** dieses $f$ ist nur fast das $g$ wie oben)
 im Punkt $(x_1, x_2, x_3) = (1, 1, 1)$, 
@@ -170,13 +170,12 @@ import numpy as np
  
 def gfun(x):
     return np.sin(x[0]) + x[2]*np.cos(x[1]) \
-        + x[0]*x[1]*x[2] \
         - 2*x[1] + x[0]**2 + x[1]**2 \
         + x[2]**2
 
 def gradg(x):
     return np.array([np.NaN,
-                     -x[2]*np.sin(x[1]) + x[0]*x[2] - 2 + 2*x[1],
+                     -x[2]*np.sin(x[1]) - 2 + 2*x[1],
                      np.NaN]).reshape((3, 1))
 
 
@@ -280,5 +279,26 @@ print('at x = ', minx)
 
 1. Benutzen sie die [`scipy.optimize.minimize`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html#scipy.optimize.minimize) Routine um ein Minimum von $g$ zu finden und messen Sie die Zeit die der Algorithmus braucht.
 
-2. Geben Sie dem Algorithmus eine Funktion mit, die den Gradienten berechnet. Berechnen sie ein Minimum und vergleichen Sie die ben&ouml;tigte Zeit.
+2. Geben Sie dem Algorithmus eine Funktion mit, die den Gradienten berechnet. Berechnen sie ein Minimum und vergleichen Sie die ben&ouml;tigte Zeit. **Hinweis**: die Routine braucht den Gradienten als *flachen* Vektor. Das kann (wie unten im Beispiel) durch eine *wrapper* Funktion erreicht werden.
 
+```{.py}
+import numpy as np
+from timeit import default_timer
+
+from scipy.optimize import minimize
+
+from loesung_5_1 import gfun, gradg
+
+
+def gradforopt(x):
+    return gradg(x).flatten()
+
+
+starttime = default_timer()
+result = minimize(...., jac=gradforopt)
+runtime = default_timer() - starttime
+
+print(f'with gradient: found minimum f(x) = {result.fun}')
+print('at x = ', result.x)
+print(f'in {runtime:.4f}s time')
+```
