done with 7 -- local csl file

--- a/emda.bib
+++ b/emda.bib
@@ -6,3 +6,11 @@
  Publisher = {Springer},
  doi = {10.1007/978-0-387-40065-5}
 }
+
+@Book{BolM04,
+ Author = {Bollh{\"o}fer, Matthias and Mehrmann, Volker},
+ Title = {Numerische {Mathematik}. {Eine} projektorientierte {Einf{\"u}hrung} f{\"u}r {Ingenieure}, {Mathematiker} und {Naturwissenschaftler}.},
+ Year = {2004},
+ Publisher = {Vieweg},
+ doi = {10.1007/978-3-322-80242-2}
+}
