--- a/vl_03.Rmd
+++ b/vl_03.Rmd
@@ -147,7 +147,7 @@ wobei $A_{\hat r}$ aus der *truncated SVD* von $A$ erzeugt wurde. Allerdings ist
 \begin{equation*}
 \min_{B\in \mathbb C^{m\times n}, \operatorname{Rg}(B)=\hat r} \|A-B\|_2 = \|A-A_{\hat r}\|_2 = \sigma_{\hat r + 1};
 \end{equation*}
-vgl. Bollhoefer/Mehrmann Satz 14.15.
+[vgl. Satz 14.15, @BolM04].
 
 Zum Abschluss noch der Zusammenhang zum Optimierungsproblem. Ist $A=U\Sigma V^*$ "SV-zerlegt", dann gilt
 \begin{equation*}
