--- a/vl_07.Rmd
+++ b/vl_07.Rmd
@@ -158,7 +158,7 @@ Nun erstmal ein hinreichendes Kriterium f&uuml;r ein Extremum
 [vgl. Thm. 2.2, @NocW06]:
 
 ::: {.theorem}
- Sei $D(f) \subseteq \mathbb{R}^{n}$ offen, und sei $f\colon D(f) \rightarrow \mathbb{R}$ stetig partiell differenzierbar. Besitzt $f$ in $\mathbf{x}^{*} \in D(f)$ ein lokales Extremum[^k&ouml;nnte auch ein Maximum sein, was wir aber einfach als ein Minimum von $-f$ einordnen], dann ist $\nabla f(\mathbf{x}^{*})=0$.
+ Sei $D(f) \subseteq \mathbb{R}^{n}$ offen, und sei $f\colon D(f) \rightarrow \mathbb{R}$ stetig partiell differenzierbar. Besitzt $f$ in $\mathbf{x}^{*} \in D(f)$ ein lokales Extremum^[k&ouml;nnte auch ein Maximum sein, was wir aber einfach als ein Minimum von $-f$ einordnen], dann ist $\nabla f(\mathbf{x}^{*})=0$.
 :::
 
 ::: {.JHSAYS data-latex=''}
@@ -248,7 +248,7 @@ $$
 $$
 und mittels Kettenregel die partielle Ableitung als Kombination elementarer Ableitungen berechnet als
 \begin{equation*}
-\frac{\partial f}{\partial x_1}(x_1,x_2) = g_3(g_2(g_1(x_1); x_2))'\cdot g_2(g_1(x_1); x_2)'\cdot g_1(x_1)'
+\frac{\partial f}{\partial x_1}(x_1,x_2) = g_3'(g_2(g_1(x_1); x_2))\cdot g_2'(g_1(x_1); x_2)\cdot g_1'(x_1)
 \end{equation*}
 
 macht sich *Automatisches Differenzieren* zu Nutze und kann zu einem Programmcode 
