new chapter started

--- a/vl_07.Rmd
+++ b/vl_07.Rmd
@@ -135,16 +135,16 @@ f(x) \to \min_{x\in \mathbb R^{n}},
 \end{equation*}
 das hei&szlig;t f&uuml;r eine Funktion $f\colon \mathbb R^n \to \mathbb R^{}$ suchen wir das $x \in D(f) \subset \mathbb R^{n}$, f&uuml;r das $f(x)$ minimal wird. 
 
-::: {.definition}
-Gegeben sei $f\colon \mathbb R^{n} \to \mathbb R^{}$. Wir nennen $x^* \in D(f)\subset \mathbb R^{n}$ 
+::: {.definition #loc-glob-minimum}
+Gegeben sei $f\colon \mathbb R^{n} \to \mathbb R^{}$. Wir nennen $x^* \in D(f)\subset \mathbb R^{n}$ die Stelle
 
- * ein *lokales Minimum* (von $f$) falls es ein $\epsilon >0$ gibt, sodass
+ * eines *lokales Minimum* (von $f$) falls es ein $\epsilon >0$ gibt, sodass
 \begin{equation*}
 f(x^*) \leq f(x)
 \end{equation*}
 f&uuml;r alle $x \in D(f) \cap B_\epsilon (x^*)$.
 
- * ein globales Minimum, falls $f(x^*) \leq f(x)$ f&uuml;r alle $x\in D(f)$ ist.
+ * eines globales Minimum, falls $f(x^*) \leq f(x)$ f&uuml;r alle $x\in D(f)$ ist.
 
 :::
 
