--- a/vl_04.Rmd
+++ b/vl_04.Rmd
@@ -142,7 +142,7 @@ x_c \\ y_c
 \|.
 \end{equation*}
 
-## maximierung der varianz in (haupt)-achsenrichtung {#sec-pca-maximierung}
+## Maximierung der Varianz in (Haupt)-Achsenrichtung {#sec-pca-maximierung}
 
 Wir wollen nun also $b_1\in \mathbb R^{2}$, mit $\|b_1\|=1$ so w&auml;hlen, dass 
 \begin{equation*}
