--- a/vl_07.Rmd
+++ b/vl_07.Rmd
@@ -6,7 +6,7 @@
 Einige Optimierungsprobleme haben wir schon kennengelernt und zwar
 
    * bei der linearen Regression (vgl. besonders Kapitel \@ref(sec-linreg-minimierung)) bei der die Parameter der Ansatzfunktion **bestm&ouml;glich** an die Daten gefittet wurden
-   * bei der Hauptkomponentenanalyse (vgl. besonders Kapitel \@ref(sec-PCA-maximierung)) als wir die Hauptrichtungen so ermittelt, dass in ihrer Richtung die Varianz **maximal** wurde.
+   * bei der Hauptkomponentenanalyse (vgl. besonders Kapitel \@ref(sec-pca-maximierung)) als wir die Hauptrichtungen so ermittelt, dass in ihrer Richtung die Varianz **maximal** wurde.
 
 Hier lag in beiden F&auml;llen ein sogenanntes linear-quadratisches Optimierungsproblem vor, f&uuml;r welche die Existenz der L&ouml;sungen bewiesen werden kann und die mit Methoden aus der linearen Algebra direkt gel&ouml;st werden k&ouml;nnen.
 
