--- a/emda.bib
+++ b/emda.bib
@@ -14,3 +14,11 @@
  Publisher = {Vieweg},
  doi = {10.1007/978-3-322-80242-2}
 }
+
+@misc{enwiki:1098148439,
+  author = "{Wikipedia contributors}",
+  title = "Stochastic gradient descent --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  url = "https://en.wikipedia.org/w/index.php?title=Stochastic_gradient_descent&oldid=1098148439",
+  note = "[Online; accessed 18-July-2022]"
+}
