--- a/vl_09.Rmd
+++ b/vl_09.Rmd
@@ -1,4 +1,4 @@
-# Stochastistic Gradient and Learning
+# Stochastisches Gradientenverfahren und Maschinelles Lernen
 
 
 ::: {#sdg-just-wiki .JHSAYS data-latex=''}
@@ -16,8 +16,8 @@ Sowohl in der Berechnung statistischer Sch&auml;tzer als auch im *Maschinellen L
 \begin{equation*}
 Q(w) = \frac{1}{N}\sum_{i=1}^N Q_i(w)
 \end{equation*}
-eine Rolle, wobei der Parameter $w$ der
-$Q$ minimiert gefunden oder gesch&auml;tzt werden soll.
+eine Rolle, wobei der Parameter $w\in \mathbb R^n$, der
+$Q$ minimiert, gefunden oder gesch&auml;tzt werden soll.
 Jede der Summandenfunktionen $Q_i$ ist typischerweise assoziiert mit einem $i$-ten Datenpunkt (einer Beobachtung) beispielsweise aus einer Menge von Trainingsdaten.
 
 Um obige Funktion zu minimieren, w&uuml;rde ein sogenannter Gradientenabstiegsverfahren den folgenden Minimierungsschritt 
@@ -41,7 +41,7 @@ dem Mittelwert der Gradienten aller $Q_i$s am Punkt $w_k$, der durch ein kleiner
 
 wobei $\mathcal J \subset \{1, \dotsc, N\}$ eine Indexmenge ist, die den *batch* der zur Approximation gew&auml;hlten $Q_i$s beschreibt.
 
-## Iterative method {#iterative_method}
+## Stochastisches Abstiegsverfahren  {#iterative_method}
 
 
 Beim stochastischen (oder "Online") Gradientenabstieg wird der wahre Gradient von $Q(w^k)$ durch einen Gradienten bei einer einzelnen Probe angenähert:
@@ -54,7 +54,7 @@ Während der Algorithmus den Trainingssatz durchläuft, führt er die obige Aktu
 
 Die wesentlichen Schritte als Algorithmus sehen wie folgt aus:
 
-```{py name='Stochastistisches Gradientenabstiegsverfahren'}
+```{py name='Stochastisches Gradientenabstiegsverfahren'}
 ###################################################
 # The basic steps of a stochastic gradient method #
 ###################################################
@@ -84,7 +84,7 @@ In der Praxis hat sich der Kompromiss etabliert, der anstelle des Gradienten ein
 \end{equation*}
 Im Algorithmus wird dann anstelle der zuf&auml;lligen Indices $j \in \{1, \dotsc, N\}$, &uuml;ber zuf&auml;llig zusammengestellte Indexmengen $\mathcal J \subset \{1, \dotsc, N\}$ iteriert.
 
-Da die einzelnen Gradienten $\nabla Q_j(w^K)$ unabh&auml;ngig voneinander berechnet werden k&ouml;nnen, kann so ein *batch* Verfahren effizient auf Computern mit mehreren Prozessoren realisiert werden. Die Konvergenztheorie ist nicht wesentlich verschieden vom eigentlichen *stochastistischen Gradientenabstiegsverfahren*, allerdings erscheint die beobachte Konvergenz weniger erratisch, da der Mittelwert statistische Ausrei&szlig;er ausmitteln kann.
+Da die einzelnen Gradienten $\nabla Q_j(w^K)$ unabh&auml;ngig voneinander berechnet werden k&ouml;nnen, kann so ein *batch* Verfahren effizient auf Computern mit mehreren Prozessoren realisiert werden. Die Konvergenztheorie ist nicht wesentlich verschieden vom eigentlichen *stochastischen Gradientenabstiegsverfahren*, allerdings erscheint die beobachte Konvergenz weniger erratisch, da der Mittelwert statistische Ausrei&szlig;er ausmitteln kann.
 
 ## Aufgabe
 
@@ -179,7 +179,7 @@ def wvec_to_wmats(wvec):
 Damit fehlen zum Programm insbesondere noch
 
  * die Zielfunktion der Optimierung in einem Datenpunkt $x_i$
- * eine Funktion, die den stochastistischen Gradienten &uuml;ber einem kleinen *batch* von Daten ausrechnet
+ * eine Funktion, die den stochastischen Gradienten &uuml;ber einem kleinen *batch* von Daten ausrechnet
  * eine Iteration, die das Gradientenabstiegsverfahren zusammen mit der *learning rate* durchf&uuml;hrt
  * ein Loop, der testet, wie das optimierte $NN$, die verbliebenen Daten klassifiziert
 
